fix: align and clean up table design (#1003)
* Aligns the design between the tables inside markdown and the tables in the API docs. I chose to go with the design from the API docs, because the separation between cells is much better.
* Fixes the poor color contrast on the table border by using the correct theming variables.
* Removes the table box shadow and fixes up some spacings to make the tables look better.

--- a/material.angular.io/src/styles/_markdown-theme.scss
+++ b/material.angular.io/src/styles/_markdown-theme.scss
@@ -33,11 +33,5 @@
     code {
       background: rgba(mat.get-color-from-palette($foreground, secondary-text), $exportBackgroundOpacity);
     }
-
-    > table {
-      th, td {
-        border-bottom-color: mat.get-color-from-palette($foreground, divider);
-      }
-    }
   }
 }
